@@ -218,7 +218,9 @@ clean:: unpatch
 # Required Debian targets
 build-arch: $(stamp)info \
 	$(patsubst %,$(stamp)build_%,$(GLIBC_PASSES)) \
-	$(patsubst %,$(stamp)check_%,$(GLIBC_PASSES))
+	$(patsubst %,$(stamp)check_%,$(GLIBC_PASSES)) \
+	$(stamp)build_C.UTF-8 \
+	$(stamp)build_locales-all
 
 build-indep: $(stamp)source
 
