@@ -5,6 +5,9 @@ glibc (2.22-4) UNRELEASED; urgency=medium
     - Fix a memory leak in the resolver.  Closes: #818178.
   * debian/patches/localedata/fr_CA-first_weekday.diff: drop.  Closes:
     #769051.
+  * debian/rules, debian/rules.d/build.mk: move the C.UTF-8 locale and
+    locales-all generation to a separate target instead of building them
+    in the build_libc target.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff,tg-sendmsg-SCM_CREDS.diff:
